Apply suggested fix to mcp/src/main/java/com/thecookiezen/archiledger/infrastructure/mcp/McpToolAdapter.java from Copilot Autofix
Co-authored-by: Copilot Autofix powered by AI <223894421+github-code-quality[bot]@users.noreply.github.com>